fix topBar spacing

--- a/src/components/topMenu/topBar.scss
+++ b/src/components/topMenu/topBar.scss
@@ -11,9 +11,8 @@
   transition: $slowlyTransition;
 
   .wrapper {
-    max-width: 1366px;
     margin: 0 auto;
-    padding: 1rem 4rem;
+    padding: 1rem 6rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
